// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drawer > renders with body slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <!--v-if-->
    <div class="" data-pohon="drawer-body">Body slot</div>
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with class correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1" class="bg-elevated">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with content slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->Content slot
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with default slot correctly 1`] = `
"Default slot
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="akar-dialog-content-v-0" role="dialog" aria-describedby="akar-dialog-description-v-2" aria-labelledby="akar-dialog-title-v-1" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with description correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with description slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <!--v-if-->
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description slot</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with direction bottom correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with direction bottom inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with direction left correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="left" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with direction left inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="left" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with direction right correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="right" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with direction right inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="right" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with direction top correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="top" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with direction top inset correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="top" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with footer slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <!--v-if-->
    <!--v-if-->
    <div class="" data-pohon="drawer-footer">Footer slot</div>
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with header slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">Header slot</div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with title correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="--akar-snap-point-height: 0; pointer-events: auto;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with title slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title slot</h2>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders with ui correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="w-20" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders without handle correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <!--v-if-->
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;

exports[`drawer > renders without overlay correctly 1`] = `
"<!--v-if-->
<!--teleport start-->


<!--v-if-->
<div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-1" aria-labelledby="akar-dialog-title-v-0" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
  <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div>
  <!--v-if-->
  <div class="" data-pohon="drawer-container">
    <div class="" data-pohon="drawer-header">
      <h2 id="akar-dialog-title-v-0" class="" data-pohon="drawer-title">Title</h2>
      <p id="akar-dialog-description-v-1" class="" data-pohon="drawer-description">Description</p>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>


<!--teleport end-->"
`;
